2009-11-10  Matevz Tadel  <matevz.tadel@ijs.si>

	Support display of "events" per site in solar view.
	This is for supercomputing-09 demo.

	* Glasses/AEVManager.cxx:
	* Glasses/AEVManager.h:
	Add two new site-viz modes: SV_EventsDone and SV_EventsFrac.
	
	* Glasses/AEVMlSucker.cxx:
	Add parsing of "totevents" and "events" keywords.
	Relax word regexp to include '.'.
	
	* Glasses/AEVSite.cxx:
	* Glasses/AEVSite.h:
	Add members needed for display of (fraction of) events done.

2009-04-13  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/AEVManager.h:
	* Glasses/AEVMlSucker.h:
	Fix for changes in L{aA} p7 pragma.

	* glass.list:
	Fix for new render-class specification.

2008-12-17  Matevz Tadel  <matevz.tadel@ijs.si>

	* bin/aev-monaclasspath.sh:
	* bin/aev_ui:
	* bin/aev_ui.pl:
	* java:
	* java/ML_WS.jar:
	* java/MonaClient.class:
	* java/MonaClient.java:
	* java/axis.jar:
	* java/commons-discovery.jar:
	* java/commons-logging.jar:
	* java/jaxrpc.jar:
	* java/log4j-1.2.8.jar:
	* java/saaj.jar:
	* java/wsdl4j.jar:
	Removed files - this stuff was obsolete like hell.

	* Makefile:
	Remove monalisa stuff.

2008-10-13  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/AEVManager.cxx:
	* Glasses/AEVManager.h:
	Add new member function MakeInfoText() that populates info-text
	bars in the overlay with current setting.
	Call it when changing display mode, limits or time-window.

2008-10-04  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/AEVMlClient.cxx:
	Fix compilation warnings that appeared with gcc-4.2.

2008-10-03  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/AEVSite.h:
	* Glasses/AEVSite.cxx:
	Add member 'Int_t mSiteSize' that is translated into planet's
	radius.

	* Glasses/AEVManager.cxx:
	* Glasses/AEVManager.h:
	Add support for setting time-window over which the site statistics
	is accumulated (forwarded to Costin's data-dumper).

	When adding a new planet set radius and mass corresponding to
	site's size. Also, set it a random color.
