@@ -6,14 +6,14 @@
 class ZModDef : public THtml::TModuleDefinition
 {
 public:
-  TString fModule;
-
   ZModDef() {}
 
-  virtual bool GetModule(TClass* cl, THtml::TFileSysEntry* fse,
+  virtual bool GetModule(TClass* /*cl*/, THtml::TFileSysEntry* fse,
 			 TString& out_modulename) const
   {
-    out_modulename = fModule;
+    TString modpath(fse->GetParent()->GetParent()->GetName());
+    modpath.ReplaceAll("libsets/", "");
+    out_modulename = modpath;
     return true;
   }
 
@@ -25,20 +25,14 @@ class ZHtml : public THtml
 public:
   ZHtml() : THtml() {}
 
-  void gen_list_of_types()
-  { CreateListOfTypes(); }
-
-  void create_hierarchy(const char** classNames, Int_t numberOfClasses)
+  void create_list_of_types()
   {
-    // This does not exist any more. Axel?
-    // CreateHierarchy(classNames, numberOfClasses);
-    CreateHierarchy();
+    CreateListOfTypes();
   }
 
-  void create_index(const char** classNames, Int_t numberOfClasses)
+  void create_hierarchy()
   {
-    // CreateIndex(classNames, numberOfClasses);
-    MakeIndex();
+    CreateHierarchy();
   }
 
   void KusKus(const char* className)
@@ -48,14 +42,13 @@ public:
     TString htmlFile;
     GetHtmlFileName(classPtr, htmlFile);
 
-    printf("KusKus -- cname=%s, hname=%s\n", className, htmlFile.Data());
+    // printf("KusKus -- cname=%s, hname=%s\n", className, htmlFile.Data());
     
     if (!htmlFile.IsNull() &&
 	(htmlFile.BeginsWith("http://")  ||
 	 htmlFile.BeginsWith("https://") ||
 	 !gSystem->IsAbsoluteFileName(htmlFile)) )
     {
-      // Class2Html(classPtr);
       MakeClass(className);
       MakeTree(className);
     }
